# bazel-gazelle

tests/bcr/go_mod/: MODULE.bazel
tests/bcr/go_mod/pkg/: BUILD.bazel
tests/bcr/go_mod/pkg/data/: BUILD.bazel
tests/bcr/go_mod/proto/: BUILD.bazel
